# intention-jailbreak

./: .gitignore  README.md  main.py  pyproject.toml
configs/: sweep_config.yaml  train_config.yaml
logs/: .gitkeep
notebooks/: test_results_analysis.ipynb  wildguardmix_analysis.ipynb
notes/: 0_dataset_analysis.md  0_dataset_stratification.md  1_training.md  2_data_filtration.md
scripts/: README.md  evaluate_test.py  plot_calibration.py  run_sweep.py  train.py
src/intention_jailbreak/: __init__.py  common.py
src/intention_jailbreak/dataset/: __init__.py  language_filter.py  utils.py  wildguardmix.py
src/intention_jailbreak/ensemble/: deepensembleclassifier.py
src/intention_jailbreak/training/: __init__.py  data.py  metrics.py  utils.py
src/intention_jailbreak/utils/: calibration.py
tests/: __init__.py  test_class_weights.py  test_language_filter.py  test_setup.py  test_train_setup.py
