[project]
name = "intention-jailbreak"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hydra-core>=1.3.2",
    "matplotlib>=3.10.6",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
    "transformers>=4.57.0",
]

[project.optional-dependencies]
vllm = [
    "vllm>=0.10.2",
]
