[project]
name = "intention-jailbreak"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "bitsandbytes>=0.48.1",
    "datasets>=4.1.1",
    "fast-langdetect>=1.0.0",
    "hydra-core>=1.3.2",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.0",
    "wandb>=0.22.2",
]

[project.optional-dependencies]
vllm = [
    "vllm>=0.10.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/intention_jailbreak"]

[tool.hatch.metadata]
allow-direct-references = true
